--- a/index.html
+++ b/index.html
@@ -13480,7 +13480,7 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20220915112823380" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20220915141939182" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -13504,7 +13504,7 @@ exports.context = contextWidget;
 <div created="20211203110358830" modified="20220513065223638" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513065309542" modified="20220915112845532" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
+<div created="20220513065309542" modified="20220915144450789" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20210926064611805" modified="20211203104743036" title="$:/state/toc/TableOfContents-Current Projects--118161433">
@@ -13699,7 +13699,7 @@ exports.context = contextWidget;
 <div created="20210925122405914" modified="20211029073350913" title="$:/state/toc/TableOfContents/Concepts-New Materialism--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513080643746" modified="20220915112836872" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
+<div created="20220513080643746" modified="20220915144449235" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20220706092625489" modified="20220915112838566" title="$:/state/toc/TableOfContents/Current and Selected Work-Forthcoming Work--118161433">
@@ -13852,7 +13852,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220915103035738" list="" modified="20220915112638284" title="$:/StoryList">
+<div created="20220915103035738" list="" modified="20220915113128481" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -16560,7 +16560,7 @@ And also about how governance is a social justice issue for me. Governance is a 
 
 https://www.amazon.co.uk/Architecture-Ritual-Peter-Blundell-Jones/dp/1472577477</pre>
 </div>
-<div created="20220915103106972" modified="20220915104127363" title="ROAM (West)">
+<div created="20220915103106972" modified="20220915144435356" tags="[[Current Work]] Residencies" title="ROAM (West)">
 <pre>[img width=&quot;400&quot;[https://github.com/jackkytan/websiteimages/blob/master/ROAM%20West%20-%20Kirkinner%20hay%20bales.jpg?raw=true]]
 &lt;br&gt;^^Hay bale season in The Machars, Wigtownshire, Aug 2022. Image by Jack Tan^^
 
@@ -16578,7 +16578,11 @@ Running from Sep 2022 to Aug 2023, Jack will
 
 !!The Raised Bed
 
-[[Call for Expressions of Interest|ROAM (West) Artists' Call]] to join the ROAM (West) artists' group.</pre>
+[[Call for Expressions of Interest|ROAM (West) Artists' Call]] to join the ROAM (West) artists' group (Sep 2022).
+
+!!The Tool Shed
+
+[[D&amp;G Cultural Strategy 2022-2030|https://dumfriesgalloway.moderngov.co.uk/documents/s37978/Cultural%20Strategy%20-%20Appendix%20-%20Final.pdf]]</pre>
 </div>
 <div created="20220915104142665" modified="20220915104505614" tags="[[ROAM (West)]]" title="ROAM (West) Artists' Call">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/FOUR_LEGS_GOOD_MARLA_COMPASS_FESTIVAL2018%C2%A9LizzieCoombes2018-60.jpg?raw=true]]
