--- a/index.html
+++ b/index.html
@@ -13480,7 +13480,7 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20220915141939182" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20220923121246433" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -13852,7 +13852,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220915103035738" list="" modified="20220915113128481" title="$:/StoryList">
+<div created="20220923121041614" list="Contact Hello [[Current Work]]" modified="20220923121124533" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14558,8 +14558,10 @@ Himali is a writer and artist based between London and Delhi. She uses metaphors
 
 Jack uses law, social norms and customs as a way of making art. He creates performances, sculpture and participatory projects that highlight the rules that guide human behaviour. Jack trained as a lawyer and worked in civil rights NGOs before becoming an artist. His Ph.D research explored legal aesthetics and performance and he co-edits the Art/Law Journal. Recent projects include Four Legs Good (2018) a revival of the medieval animal trials for Compass Festival Leeds and V&amp;A London; his Singapore Biennale presentation Voices From The Courts examining the vocality of the State Courts of Singapore (2016), Law’s Imagination (2016) a curatorial residency at arebyte exploring legal aesthetics; his solo exhibition How to do things with rules (2015) at the ICA Singapore; and Closure (2012), a year-long residency and exhibition at the UK Department for Health looking at the liquidation of their social work quango. Jack has also taught sculpture at the Royal College of Art and University of Brighton, and politics at Goldsmiths.</pre>
 </div>
-<div created="20210925110708087" modified="20220513071246102" tags="[[Selected Work]] Sculpture Residencies 2012" title="Closure">
+<div created="20210925110708087" modified="20220923121244957" tags="[[Selected Work]] Sculpture Residencies 2012" title="Closure">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Closure_gscc1.jpg?raw=true]]
+
+^^Jack Ky Tan, GSCC Kuduru (Travel Reimbursement Forms), 2012, ceramic, General Social Care Council – Department for Health, London. © Courtesy the artist. Photo: GSCC^^
 
 ''An exhibition marking the closure of the General Social Care Council (2001-2012)''
 
@@ -16560,13 +16562,13 @@ And also about how governance is a social justice issue for me. Governance is a 
 
 https://www.amazon.co.uk/Architecture-Ritual-Peter-Blundell-Jones/dp/1472577477</pre>
 </div>
-<div created="20220915103106972" modified="20220915144435356" tags="[[Current Work]] Residencies" title="ROAM (West)">
+<div created="20220915103106972" modified="20220915151218575" tags="[[Current Work]] Residencies" title="ROAM (West)">
 <pre>[img width=&quot;400&quot;[https://github.com/jackkytan/websiteimages/blob/master/ROAM%20West%20-%20Kirkinner%20hay%20bales.jpg?raw=true]]
 &lt;br&gt;^^Hay bale season in The Machars, Wigtownshire, Aug 2022. Image by Jack Tan^^
 
 !!About
 
-ROAM (West) explores how contemporary art practice can be developed in the Western region of Dumfries and Galloway. Led by artist-curator Jack Ky Tan, Roam (West) has two strands: (1) it aims to provide space and opportunity for practitioners to connect, share knowledge and to show together, (2) to research the potential for developing contemporary visual arts in the West.
+ROAM (West) explores how contemporary art practice can be developed in the Western region of Dumfries and Galloway. Commissioned by [[Upland|https://www.weareupland.com/]], and led by artist-curator Jack Ky Tan, Roam (West) has two strands: (1) it aims to provide space and opportunity for practitioners to connect, share knowledge and to show together, (2) to research the potential for developing contemporary visual arts in the West.
 
 Running from Sep 2022 to Aug 2023, Jack will
 
