--- a/index.html
+++ b/index.html
@@ -13909,7 +13909,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20220925113319574" list="" modified="20220925143633391" title="$:/StoryList">
+<div list="Contact Hello [[Current Work]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14800,7 +14800,7 @@ It isn't about following rules by rote or reacting to circumstances. Trustees do
 
 [[Selected Work]]</pre>
 </div>
-<div created="20220513065347695" modified="20220915111123579" tags="[[Current and Selected Work]]" title="Current Work">
+<div created="20220513065347695" modified="20220930115029910" tags="[[Current and Selected Work]]" title="Current Work">
 <pre>Exhibitions, residencies, talks and projects that are currently on display or available to view. 
 
 Also check out [[recent work|Recent Work]] I've finished in the last few months together with some completed while back but are still considered recent to me because they have a long finish. 🍷 
@@ -14810,6 +14810,7 @@ Also check out [[recent work|Recent Work]] I've finished in the last few months 
 [[Works-in-Progress]] are emerging and current areas of study/research that may or may not ever be presented. Some current long term projects may be described or categorised here too, but always within the context of various nodes of artistic study and development that I am working on.
 
 !!Current Work
+|[img[https://github.com/jackkytan/websiteimages/blob/master/Mandy%20Merzaban,%20Workspace%20Tableau%202021.png?raw=true]]|Slow Writing with Mandy Merzaban, Autumn 2022. A collaborative writing project with Mandy Merzaban to share our thoughts and practices. Commissioned by Delfina Foundation and funded by Tate.|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/Performing%20Boardness%20-%20audience%20image1.jpg?raw=true]]|[[Performing Boardness]] for [[Fact Liverpool|https://www.fact.co.uk/event/jack-tan-performing-boardness]], Sep 2022. A participatory performance and installation where FACT Trustees perform board meetings with members of the public. The culmination of my [[FACT Board Artist-in-Residence]], I will be presenting a performance event at FACT Liverpool comprising a number of roundtables led by FACT board members. This event is an adaptation of Neil Cumming's reenactment of the Artist Placement Group's 'Sculpture' which he produced at Raven Row and called [['Education Not Knowing'|https://neilcummings.com/content/apg-sculpture]].|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/Homo%20Sacer%20-%20la%20trobe%20entrance.jpg?raw=true]]|''Homo Sacer exhibtion'' for [[La Trobe Art Institute|https://www.latrobe.edu.au/art-institute]] in Bendigo, Victoria, Australia (Feb - May 2023). The exhibition explores the condition of outside or ejected from the law, or of lives and bodies being 'unlawed'.|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/ROAM%20insta%20card1.jpg?raw=true]]|[[ROAM (West)]] - Contemporary Art development in Dumfries &amp; Galloway for [[Upland|https://www.weareupland.com/]] (Sep 2022 - Aug 2023). The project explores how contemporary art practice can be developed in the west of the county via a year long residency where I will make a new body of artwork in conversation with other contemporary artists in the region.|
