--- a/index.html
+++ b/index.html
@@ -445,6 +445,8 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents/Artistic Practice-Curating--118161433</li>
 
+<li>$:/state/toc/TableOfContents/Artistic Practice-Digital--118161433</li>
+
 <li>$:/state/toc/TableOfContents/Artistic Practice-Installation--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Artistic Practice-Law and Art--118161433</li>
@@ -528,6 +530,10 @@ Error message and password prompt
 <li>$:/state/toc/TableOfContents/Current and Selected Work/Current Work/RPG Longsight-RPG Longsight (Foundation CIO)--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Current and Selected Work/Selected Work-How To Do Things With Rules--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Current and Selected Work/Selected Work-Island Life--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Current and Selected Work/Selected Work-Karaoke Court--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Current Projects-Global Ethnic Majorities Board Association--118161433</li>
 
@@ -13522,11 +13528,11 @@ exports.context = contextWidget;
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
 </div>
-<div created="20211209081213628" modified="20220915112826432" title="$:/state/toc/TableOfContents-About--118161433">
-<pre>close</pre>
+<div created="20211209081213628" modified="20220930115545906" title="$:/state/toc/TableOfContents-About--118161433">
+<pre>open</pre>
 </div>
-<div created="20220513071259660" modified="20220925144338063" title="$:/state/toc/TableOfContents-Artistic Practice--118161433">
-<pre>close</pre>
+<div created="20220513071259660" modified="20220930123843480" title="$:/state/toc/TableOfContents-Artistic Practice--118161433">
+<pre>open</pre>
 </div>
 <div created="20220223054537977" modified="20220513064752478" title="$:/state/toc/TableOfContents-Artworks--118161433">
 <pre>open</pre>
@@ -13540,8 +13546,8 @@ exports.context = contextWidget;
 <div created="20211203110358830" modified="20220513065223638" title="$:/state/toc/TableOfContents-Current and Recent Work--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513065309542" modified="20220915144450789" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
-<pre>close</pre>
+<div created="20220513065309542" modified="20220930115521414" title="$:/state/toc/TableOfContents-Current and Selected Work--118161433">
+<pre>open</pre>
 </div>
 <div created="20210926064611805" modified="20211203104743036" title="$:/state/toc/TableOfContents-Current Projects--118161433">
 <pre>open</pre>
@@ -13654,29 +13660,32 @@ exports.context = contextWidget;
 <div created="20220513091713456" modified="20220513114508011" title="$:/state/toc/TableOfContents/Artistic Practice-Curating--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513083711981" modified="20220701101343590" title="$:/state/toc/TableOfContents/Artistic Practice-Installation--118161433">
+<div created="20220930123845048" modified="20220930123851016" title="$:/state/toc/TableOfContents/Artistic Practice-Digital--118161433">
 <pre>close</pre>
 </div>
-<div created="20220701101345268" modified="20220702082326277" title="$:/state/toc/TableOfContents/Artistic Practice-Law and Art--118161433">
+<div created="20220513083711981" modified="20220930123859310" title="$:/state/toc/TableOfContents/Artistic Practice-Installation--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513083714326" modified="20220701113929549" title="$:/state/toc/TableOfContents/Artistic Practice-Organisational Change--118161433">
+<div created="20220701101345268" modified="20220930123905036" title="$:/state/toc/TableOfContents/Artistic Practice-Law and Art--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513083717501" modified="20220701101332625" title="$:/state/toc/TableOfContents/Artistic Practice-Performances--118161433">
+<div created="20220513083714326" modified="20220930123918806" title="$:/state/toc/TableOfContents/Artistic Practice-Organisational Change--118161433">
 <pre>close</pre>
+</div>
+<div created="20220513083717501" modified="20220930123935718" title="$:/state/toc/TableOfContents/Artistic Practice-Performances--118161433">
+<pre>open</pre>
 </div>
 <div created="20220513083719637" modified="20220925144337009" title="$:/state/toc/TableOfContents/Artistic Practice-Residencies--118161433">
 <pre>close</pre>
 </div>
-<div created="20220925130835660" modified="20220925132411806" title="$:/state/toc/TableOfContents/Artistic Practice-Work with Institutions--118161433">
+<div created="20220925130835660" modified="20220930123933328" title="$:/state/toc/TableOfContents/Artistic Practice-Work with Institutions--118161433">
 <pre>close</pre>
 </div>
 <div created="20220701112620290" modified="20220701112621370" title="$:/state/toc/TableOfContents/Artistic Practice/Law and Art-Contracts and Art--118161433">
 <pre>close</pre>
 </div>
-<div created="20220701112617128" modified="20220702082152490" title="$:/state/toc/TableOfContents/Artistic Practice/Law and Art-Law and Art Research--118161433">
-<pre>open</pre>
+<div created="20220701112617128" modified="20220930123902720" title="$:/state/toc/TableOfContents/Artistic Practice/Law and Art-Law and Art Research--118161433">
+<pre>close</pre>
 </div>
 <div created="20220701112614026" modified="20220701112616098" title="$:/state/toc/TableOfContents/Artistic Practice/Law and Art-Litigation and Art--118161433">
 <pre>close</pre>
@@ -13720,7 +13729,7 @@ exports.context = contextWidget;
 <div created="20220925113540023" modified="20220925143529914" title="$:/state/toc/TableOfContents/Artistic Practice/Residencies-ROAM (West)--118161433">
 <pre>close</pre>
 </div>
-<div created="20220925131257981" modified="20220925132346271" title="$:/state/toc/TableOfContents/Artistic Practice/Work with Institutions-FACT Liverpool--118161433">
+<div created="20220925131257981" modified="20220930123932460" title="$:/state/toc/TableOfContents/Artistic Practice/Work with Institutions-FACT Liverpool--118161433">
 <pre>close</pre>
 </div>
 <div created="20220925131518820" modified="20220925132323015" title="$:/state/toc/TableOfContents/Artistic Practice/Work with Institutions/FACT Liverpool-FACT Board Artist-in-Residence--118161433">
@@ -13753,16 +13762,16 @@ exports.context = contextWidget;
 <div created="20210925122405914" modified="20211029073350913" title="$:/state/toc/TableOfContents/Concepts-New Materialism--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513080643746" modified="20220915144449235" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
+<div created="20220513080643746" modified="20220930123840882" title="$:/state/toc/TableOfContents/Current and Selected Work-Current Work--118161433">
+<pre>open</pre>
+</div>
+<div created="20220706092625489" modified="20220930124223635" title="$:/state/toc/TableOfContents/Current and Selected Work-Forthcoming Work--118161433">
 <pre>close</pre>
 </div>
-<div created="20220706092625489" modified="20220915112838566" title="$:/state/toc/TableOfContents/Current and Selected Work-Forthcoming Work--118161433">
+<div created="20220630100426988" modified="20220930124215481" title="$:/state/toc/TableOfContents/Current and Selected Work-Recent Work--118161433">
 <pre>close</pre>
 </div>
-<div created="20220630100426988" modified="20220915111215240" title="$:/state/toc/TableOfContents/Current and Selected Work-Recent Work--118161433">
-<pre>close</pre>
-</div>
-<div created="20220513065839196" modified="20220915112843690" title="$:/state/toc/TableOfContents/Current and Selected Work-Selected Work--118161433">
+<div created="20220513065839196" modified="20220930123839041" title="$:/state/toc/TableOfContents/Current and Selected Work-Selected Work--118161433">
 <pre>close</pre>
 </div>
 <div created="20220701100448396" modified="20220701100451104" title="$:/state/toc/TableOfContents/Current and Selected Work-Works-in-Progress--118161433">
@@ -13777,8 +13786,14 @@ exports.context = contextWidget;
 <div created="20220621132123393" modified="20220621135634098" title="$:/state/toc/TableOfContents/Current and Selected Work/Current Work/RPG Longsight-RPG Longsight (Foundation CIO)--118161433">
 <pre>open</pre>
 </div>
-<div created="20220629141228049" modified="20220629143530695" title="$:/state/toc/TableOfContents/Current and Selected Work/Selected Work-How To Do Things With Rules--118161433">
+<div created="20220629141228049" modified="20220930123723492" title="$:/state/toc/TableOfContents/Current and Selected Work/Selected Work-How To Do Things With Rules--118161433">
+<pre>open</pre>
+</div>
+<div created="20220930123754674" modified="20220930123755596" title="$:/state/toc/TableOfContents/Current and Selected Work/Selected Work-Island Life--118161433">
 <pre>close</pre>
+</div>
+<div created="20220930123756544" modified="20220930123756544" title="$:/state/toc/TableOfContents/Current and Selected Work/Selected Work-Karaoke Court--118161433">
+<pre>open</pre>
 </div>
 <div created="20210926070707157" modified="20211005145317550" title="$:/state/toc/TableOfContents/Current Projects-Global Ethnic Majorities Board Association--118161433">
 <pre>close</pre>
@@ -13909,7 +13924,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Contact Hello [[Current Work]]" title="$:/StoryList">
+<div created="20220930115523044" list="[[A Kiss Is Just A Kiss]] [[Will You Won't You]] [[Sample artist contract]] [[Pam -v- Pauline]] Conference [[Art School Surgery]] [[Four Legs Good]] Closure About [[Current Work]]" modified="20220930125200444" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14253,14 +14268,25 @@ Image credit: Excerpt from Jade Montserrat’s notebook pertaining to her though
 
 [img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/This-Has-Nothing-To-Do-With-Politics%202014%20-%20New%20Aesthetic%20Paradigm%20pamplet.jpg]]</pre>
 </div>
-<div created="20210925120957665" modified="20210925121534406" title="A Kiss Is Just A Kiss">
-<pre>[img[https://previews.dropbox.com/p/thumb/ABTADpzT5cL-Iak0yeAqdX-kcRUdMOQclfqq1P8mBaxJzHRFNiQcnihX_XfpapRkY8TNmcspkG8EH2apRA87Bc-QaXWudApLA3JuO2DUJuq5NyRWqzuVilCKOAaGLAcztD9EG8IHNlgCZmmwKaJekNXqh29nchago5GeJrYmHqyRclQdTZIlSlpkHJiCozYEKeunVOSuXcQe5Lzzbvj8UzeUev5I4ctEEmtuBs4OA3W6OURr6auaHA4rGZIeKso01NaNmRm9NMdZ8B-ut5cj2oqZDqs-uBy1Fat271rR1o8Be8BVW5_slwNQolOj1_VPHL0qPoxK2o7vxGmsVJNhVjiNTKKOt_f6TxH7hFzzdWD20w/p.jpeg?size=1280x960&amp;size_mode=3]]
+<div created="20210925120957665" modified="20220930130533384" tags="Performances" title="A Kiss Is Just A Kiss">
+<pre>[img[https://github.com/jackkytan/websiteimages/blob/master/AKissIsJustAKiss_InIVA-2014%C2%A9JackTan_photo0112-ChristaHolka.jpg?raw=true]]
+
+Contemporary Rites: 
+&lt;br&gt;6 November 6.30-8.30PM
+&lt;br&gt;Live Performance: A KISS IS JUST A KISS 
+&lt;br&gt;Iniva, Rivington Place, London
 
 A KISS IS JUST A KISS was part of the ongoing project The [[Office of Public Ritual]] (OPR) and was commissioned for Iniva's [[Contemporary Rites|https://iniva.org/programme/events/contemporary-rites-6-november-6-30-8-30/]] programme.
 
 A KISS IS JUST A KISS is an interactive public ritual that uses the convention of kissing as blessing. It is a performance that invokes a sense of the originating spirit of Iniva and explores gestures of affection, consecration, and goodwill. The performance draws on material from Iniva’s archive as well as interviews with supporters and friends. Audience members are invited to bring an object to be part of the ritual if they wish.
 
-OPR is a service that creates bespoke rituals for significant occasions or life events. Iniva has commissioned a ritual performance from OPR for public presentation.</pre>
+The work comprises a reading of the poem [[A Creed for Iniva]], followed by a performance ritual where Jack kisses the gallery floor, walls, people and objects. Each spot kissed is then marked with gold leaf.
+
+Performers: Nina Shen, Elizabeth Porter
+
+OPR is a service that creates bespoke rituals for significant occasions or life events. Iniva has commissioned a ritual performance from OPR for public presentation.
+
+[img[https://github.com/jackkytan/websiteimages/blob/master/AKissIsJustAKiss_InIVA-2014%C2%A9JackTan_photo0141-ChristaHolka.jpg?raw=true]]</pre>
 </div>
 <div created="20211209094650551" modified="20220513085057516" tags="Writing 2021" title="A Reimagining of Relations">
 <pre>[[A Reimagining of Relations|https://iniva.org/shop/publications/a-reimagining-of-relations/?add-to-cart=3248]] is a publication documenting [[Jade Montserrat]]'s commision with Iniva and Manchester Art Gallery. The book documents a [[conversation|In conversation with Jade Montserrat, Amy Lawrence and Jack Tan]] between Jade, Amy Lawrence and me. This conversation also led to the founding of the [[Global Ethnic Majorities Board Association]]. Around the time of its publication, Jade had also invited me to present alongside her in a panel discussion on 'Creative Critique as Care' where I offered some thoughts on [[Institutional Critique as Loving Activism]].
@@ -14654,10 +14680,10 @@ Himali is a writer and artist based between London and Delhi. She uses metaphors
 
 Jack uses law, social norms and customs as a way of making art. He creates performances, sculpture and participatory projects that highlight the rules that guide human behaviour. Jack trained as a lawyer and worked in civil rights NGOs before becoming an artist. His Ph.D research explored legal aesthetics and performance and he co-edits the Art/Law Journal. Recent projects include Four Legs Good (2018) a revival of the medieval animal trials for Compass Festival Leeds and V&amp;A London; his Singapore Biennale presentation Voices From The Courts examining the vocality of the State Courts of Singapore (2016), Law’s Imagination (2016) a curatorial residency at arebyte exploring legal aesthetics; his solo exhibition How to do things with rules (2015) at the ICA Singapore; and Closure (2012), a year-long residency and exhibition at the UK Department for Health looking at the liquidation of their social work quango. Jack has also taught sculpture at the Royal College of Art and University of Brighton, and politics at Goldsmiths.</pre>
 </div>
-<div created="20210925110708087" modified="20220923121244957" tags="[[Selected Work]] Sculpture Residencies 2012" title="Closure">
+<div created="20210925110708087" modified="20220930122717932" tags="[[Selected Work]] Sculpture Residencies 2012" title="Closure">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Closure_gscc1.jpg?raw=true]]
 
-^^Jack Ky Tan, GSCC Kuduru (Travel Reimbursement Forms), 2012, ceramic, General Social Care Council – Department for Health, London. © Courtesy the artist. Photo: GSCC^^
+^^Jack Ky Tan (2012). GSCC Kuduru (Travel Reimbursement Forms); sgraffito, ceramic, earthenware, high alkaline glaze. Part of the CLOSURE exhibition and residency at the Department for Health (London), charting the dissolution of the General Social Care Council (2001-2012). Photo: GSCC.^^
 
 ''An exhibition marking the closure of the General Social Care Council (2001-2012)''
 
@@ -15221,8 +15247,10 @@ Read about the Guildhall School of Music and Drama's symposium on found performa
 
 Image: ‘Otherwise normal ECG’ (2018), Stuart Wood, score detail (work in progress), reproduced by permission</pre>
 </div>
-<div created="20210925105104735" modified="20220701111905216" tags="[[Selected Work]] Performances Installation [[more than human]] 2018 [[Litigation and Art]]" title="Four Legs Good">
+<div created="20210925105104735" modified="20220930122936776" tags="[[Selected Work]] Performances Installation [[more than human]] 2018 [[Litigation and Art]]" title="Four Legs Good">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/FLG_Jess-the-Judge.jpg?raw=true]]
+
+^^Jack Ky Tan (2018). Four Legs Good; performance, live art, mixed media, installation. Part of Compass Festival 2018. Photo: Lizzie Coombes.^^
 
  ''17 – 24 November 2018, Compass Festival, Leeds''
 
@@ -15248,7 +15276,9 @@ Day of live hearings 24 November 2018
 
 &lt;iframe width=&quot;560&quot; height=&quot;315&quot; src=&quot;https://www.youtube.com/embed/0ojOAs04sIY&quot; title=&quot;YouTube video player&quot; frameborder=&quot;0&quot; allow=&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;
 
-[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/FOUR_LEGS_GOOD_MARLA_COMPASS_FESTIVAL2018%C2%A9LizzieCoombes2018-60.jpg]]</pre>
+[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/FOUR_LEGS_GOOD_MARLA_COMPASS_FESTIVAL2018%C2%A9LizzieCoombes2018-60.jpg]]
+
+^^Jack Ky Tan (2018). Four Legs Good (R -v- Marla the Staffie); performance, live art, mixed media, installation. Part of Compass Festival 2018. Photo: Lizzie Coombes.^^</pre>
 </div>
 <div created="20210925113948734" modified="20220701111929844" tags="Writing 2020 [[Litigation and Art]]" title="Four Legs Good, Two Legs Good">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/four%20legs%20good%20two%20legs%20good%20cover.jpg?raw=true]]
@@ -17214,8 +17244,8 @@ https://docs.google.com/document/d/1r3xXJseLgVpH7LfR7H0EVjZj7KhPk24NisvEht_g_IM/
 
 Download a copy of the template [[here|https://github.com/jackkytan/websiteimages/raw/master/Karaoke%20Court%20Arbitration%20Agreement%20template%20(Singapore%20version).pdf]].</pre>
 </div>
-<div created="20210925121702296" modified="20220513063702614" tags="Performances" title="Score From Guantanamo">
-<pre>[img[https://previews.dropbox.com/p/thumb/ABRIgkuDZkNL9p705XekTOoSwl_lHUovsSQH7yKYU_QDVcyFSXyy1oU0COoCeQlGWxO4copncC6oZNupBK3KgS9_T38gG0iwTEb3M858uiVGUvgcIXOA2OLQDq35evcMYAslxnLxJlG-Re7msxRMQfscxv0yfimniQGOvwtLzxhego4GTLyAtE_bYwRKBJMsQyPlD3zwzqwnE5HBH_S6BK_Csve3aoJ9weTmwmJNaJhHQWf2woagPWf4puRarA-W_pWqxf0ywdw4T9k2D15jgUD0Ymd68IwTUwNjuRb3oKjmH4F3UKYhwx-oQzHaOFtsqwQqIsRNAU2oA78s0yHt5W0L-YPVEri-fDGK244vlrUFeg/p.jpeg?fv_content=true&amp;size_mode=5]]
+<div created="20210925121702296" modified="20220930124054799" tags="Performances" title="Score From Guantanamo">
+<pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Score-from-guantanamo.jpg?raw=true]]
 
 ''Score from Guantanamo'' (8-10 May 2014) was a set of performance instructions created for Clifford Owens’ work [Anthology (2014)](http://homemcr.org/exhibition/clifford-owens-better-the-rebel-you-know/):
 
